; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_deadbeef_rand.c_deadbeef_generate_seed.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_deadbeef_rand.c_deadbeef_generate_seed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @deadbeef_generate_seed() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @time(i32* null)
  store i32 %3, i32* %1, align 4
  %4 = call i32 (...) @clock()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %1, align 4
  %6 = shl i32 %5, 24
  %7 = load i32, i32* %2, align 4
  %8 = shl i32 %7, 11
  %9 = xor i32 %6, %8
  %10 = load i32, i32* %1, align 4
  %11 = xor i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = ptrtoint i32* %2 to i64
  %14 = xor i64 %12, %13
  %15 = trunc i64 %14 to i32
  ret i32 %15
}

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @clock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
